--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,30 @@
 body {
-  font-family: sans-serif;
+  font-family: Roboto,sans-serif!important;
+  margin:0px;
+  font-weight:100;
 }
 
 #top-header{
 	width:100%;
-	background-color:#0099ff;
-	height:30%;
+	background-color:#0fabd6;
+	/*height:100%;*/
+  /*max-height:700px;*/
 	color:white;
-	font-size:2em;
 
+}
+#intro{
+  position:relative;
+  width:80%;
+  max-width:700px;
+  text-align:justify;
+  margin:auto;
+  padding: 30px 0px;
+}
+#footer {
+  width:80%;
+  margin:auto;
+  text-align:center;
+  font-size:11px;
 }
 #topics-context {
 	width:100%;
@@ -31,18 +47,48 @@ body {
   color:white;
   font-size:2em;
 }
+
+/*
+
+  TWEETS BY DAY styles
+
+*/
+
 #TweetsByDay{
   position:relative;
   margin:auto;
-  font-family: sans-serif;
   width:100%;
-  /*max-width:700px;*/
+  max-width:700px;
+  min-width:500px;
 }
+#TweetsByDay-map {
+  position:relative;
+  width:500px;
+  margin:auto;
+}
+#TweetsByDay-map svg {
+  position:relative;
+  margin:auto;
+}
+#TweetsByDay-bars{
+  width: 500px;
+  position:relative;
+  margin:auto;
+}
+#TweetsByDay p{
+  position:relative;
+  width:500px;
+  margin:auto;
+}
+/*
+
+  SENTIMENT styles
+
+*/
 
 #SentimentGrid{
   position:relative;
   margin:auto;
-  font-family: sans-serif;
   width:100%;
   max-width:700px;
 }
@@ -51,7 +97,6 @@ body {
 }
 #SentimentGrid .state text{
 	fill:#6b6a69;
-	font-family: sans-serif;
 	text-anchor:middle;
 	font-size:12px;
 }
