--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ body {
 	background-color:#cc0066;
 	min-height:20%;
 	color:white;
-	font-size:2em;
 }
 .content{
 	width:100%;
@@ -173,12 +172,6 @@ body {
   padding:20px 0px;
   background-color:#f7f7f7;
 }
-#HashtagsPlot{
-  position:relative;
-  margin:auto;
-  width:50%;
-  float:left;
-}
 .cluster-text text{
   font-size:11px;
   cursor:pointer;
@@ -192,4 +185,10 @@ body {
 #HashtagsBars text{
   fill:white;
   font-weight:bold;
+}
+
+#HashtagsGraph{
+  position:relative;
+  margin:auto;
+  width:50%;
 }
