--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,14 @@ body {
 
 #top-header{
 	width:100%;
-	background-color:#0fabd6;
+	background-color:#50abf2;
 	/*height:100%;*/
   /*max-height:700px;*/
 	color:white;
-
 }
+a {cursor:pointer;}
+#top-header a:visited {color:white;}
+#top-header a:link {color:white;}
 #intro{
   position:relative;
   width:80%;
@@ -19,6 +21,7 @@ body {
   text-align:justify;
   margin:auto;
   padding: 30px 0px;
+  font-weight:400;
 }
 #footer {
   width:80%;
