--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ a {cursor:pointer;}
   width:100%;
   padding:20px 0px;
   background-color:#f7f7f7;
+  position:relative;
 }
 .cluster-text text{
   font-size:11px;
