--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,8 @@ a {cursor:pointer;}
 }
 #topics-context {
 	width:100%;
-	background-color:#cc0066;
-	min-height:20%;
-	color:white;
+	background-color:white;
+  color:black;
 }
 .content{
 	width:100%;
