--- a/css/styles.css
+++ b/css/styles.css
@@ -202,3 +202,7 @@ a {cursor:pointer;}
   margin:auto;
   width:50%;
 }
+#TopicsGraph .content{
+  position:relative;
+  padding: 50px 0px 0px 0px;
+}
