--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,3 +1,10 @@
+#topics-context{
+  width:100%;
+  background-color:#f7f7f7;
+  min-height:20%;
+  color:black;
+  font-weight:300;
+}
 #CovidTopicsTimeline {
   width:100%;
   margin:auto;
