--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body {
 #top-header{
 	width:100%;
 	background-color:#50abf2;
-	/*height:100%;*/
-  /*max-height:700px;*/
+	height:100%;
+  max-height:720px;
 	color:white;
 }
 a {cursor:pointer;}
@@ -206,3 +206,6 @@ a {cursor:pointer;}
   position:relative;
   padding: 50px 0px 0px 0px;
 }
+
+#TopicsGraph  a:visited {color:black;}
+#TopicsGraph  a:link {color:black;}
